--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.37",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-navigation": "^7.40.1",
-    "react-native-reanimated": "^3.15.3",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "tailwindcss": "^3.4.13",
+    "expo-router": "~3.5.23",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
